--- a/src/main/resources/assets/figura/lang/nl_nl.json
+++ b/src/main/resources/assets/figura/lang/nl_nl.json
@@ -154,115 +154,115 @@
   "figura.gui.panels.title.keybind": "Avatar-toetsencombinaties",
   "figura.gui.panels.title.avatar": "Avatar-preview",
 
-  "figura.gui.wardrobe.expand_wardrobe.tooltip": "Expand wardrobe list",
-  "figura.gui.wardrobe.minimize_wardrobe.tooltip": "Minimize wardrobe list",
-  "figura.gui.wardrobe.upload.tooltip": "Upload avatar to Figura server",
-  "figura.gui.wardrobe.reload.tooltip": "Reload avatar",
-  "figura.gui.wardrobe.delete.tooltip": "Delete avatar from Figura server",
-  "figura.gui.wardrobe.sound.tooltip": "Avatar Sounds",
-  "figura.gui.wardrobe.keybind.tooltip": "Avatar Keybinds",
-  "figura.gui.wardrobe.folder.tooltip": "Open avatars root folder",
-  "figura.gui.wardrobe.unselect": "Unselect",
+  "figura.gui.wardrobe.expand_wardrobe.tooltip": "Klap kledingkast uit",
+  "figura.gui.wardrobe.minimize_wardrobe.tooltip": "Klap kledingkast in",
+  "figura.gui.wardrobe.upload.tooltip": "Upload avatar naar de Figura-server",
+  "figura.gui.wardrobe.reload.tooltip": "Herlaad avatar",
+  "figura.gui.wardrobe.delete.tooltip": "Verwijder avatar van de Figura-server",
+  "figura.gui.wardrobe.sound.tooltip": "Avatar-geluiden",
+  "figura.gui.wardrobe.keybind.tooltip": "Avatar-toetsencombinaties",
+  "figura.gui.wardrobe.folder.tooltip": "Open avatar-map",
+  "figura.gui.wardrobe.unselect": "Deselecteer",
 
-  "figura.gui.sound.play": "Play sound",
-  "figura.gui.sound.stop": "Stop sound",
+  "figura.gui.sound.play": "Speel geluid af",
+  "figura.gui.sound.stop": "Stop geluid",
 
-  "figura.gui.trust.reset": "Reset All",
-  "figura.gui.trust.reload_all": "Reload All",
-  "figura.gui.trust.expand_trust.tooltip": "Expand advanced trust menu",
-  "figura.gui.trust.minimize_trust.tooltip": "Minimize advanced trust menu",
+  "figura.gui.trust.reset": "Alles resetten",
+  "figura.gui.trust.reload_all": "Alles herladen",
+  "figura.gui.trust.expand_trust.tooltip": "Klap geavanceerd vertrouwensmenu uit",
+  "figura.gui.trust.minimize_trust.tooltip": "Klap geavanceerd vertrouwensmenu in",
 
-  "figura.gui.trust.size": "Avatar Size",
-  "figura.gui.trust.complexity": "Model Complexity",
-  "figura.gui.trust.init": "Init Instructions",
+  "figura.gui.trust.size": "Avatar-grootte",
+  "figura.gui.trust.complexity": "Modelcomplexiteit",
+  "figura.gui.trust.init": "Init-instructies",
   "figura.gui.trust.init.root": "Root: %s",
-  "figura.gui.trust.init.entity": "Entity: %s",
-  "figura.gui.trust.tick": "Tick Instructions",
-  "figura.gui.trust.tick.world": "World: %s",
-  "figura.gui.trust.tick.entity": "Entity: %s",
-  "figura.gui.trust.render": "Render Instructions",
-  "figura.gui.trust.render.world": "World: %s",
-  "figura.gui.trust.render.entity": "Entity: %s",
-  "figura.gui.trust.render.post_entity": "Post Entity: %s",
-  "figura.gui.trust.render.post_world": "Post World: %s",
+  "figura.gui.trust.init.entity": "Entiteit: %s",
+  "figura.gui.trust.tick": "Tick-instructies",
+  "figura.gui.trust.tick.world": "Wereld: %s",
+  "figura.gui.trust.tick.entity": "Entiteit: %s",
+  "figura.gui.trust.render": "Render-instructies",
+  "figura.gui.trust.render.world": "Wereld: %s",
+  "figura.gui.trust.render.entity": "Entiteit: %s",
+  "figura.gui.trust.render.post_entity": "Post-entiteit: %s",
+  "figura.gui.trust.render.post_world": "Post-wereld: %s",
 
-  "figura.gui.status.size": "Size",
-  "figura.gui.status.size.0": "none",
-  "figura.gui.status.size.1": "Avatar size is greater than %s",
-  "figura.gui.status.size.2": "Avatar size is greater than %s",
+  "figura.gui.status.size": "Grootte",
+  "figura.gui.status.size.0": "Geen",
+  "figura.gui.status.size.1": "Avatar is groter dan %s",
+  "figura.gui.status.size.2": "Avatar is groter dan %s",
   "figura.gui.status.size.3": "ok",
 
-  "figura.gui.status.texture": "Texture",
-  "figura.gui.status.texture.0": "none",
+  "figura.gui.status.texture": "Textuur",
+  "figura.gui.status.texture.0": "geen",
   "figura.gui.status.texture.3": "ok",
 
   "figura.gui.status.script": "Script",
   "figura.gui.status.script.0": "none",
-  "figura.gui.status.script.1": "This Avatar script contains an error",
-  "figura.gui.status.script.2": "This Avatar script targets a newer version of Figura",
+  "figura.gui.status.script.1": "Er zit een fout in dit avatar-script.",
+  "figura.gui.status.script.2": "Dit avatar-script is gemaakt voor een nieuwere versie van Figura.",
   "figura.gui.status.script.3": "ok",
 
   "figura.gui.status.backend": "Backend",
-  "figura.gui.status.backend.reason": "Reason",
-  "figura.gui.status.backend.1": "Disconnected",
-  "figura.gui.status.backend.2": "Connecting",
-  "figura.gui.status.backend.3": "Connected",
+  "figura.gui.status.backend.reason": "Reden",
+  "figura.gui.status.backend.1": "Niet verbonden",
+  "figura.gui.status.backend.2": "Bezig met verbinden...",
+  "figura.gui.status.backend.3": "Verbonden",
 
 
-  "figura.config.input.any": "Text...",
-  "figura.config.input.int": "Integer...",
-  "figura.config.input.positive_int": "Integer...",
-  "figura.config.input.float": "Number...",
-  "figura.config.input.hex_color": "Color...",
-  "figura.config.input.folder_path": "Path...",
-  "figura.config.input.ip": "IP Address...",
+  "figura.config.input.any": "Tekst...",
+  "figura.config.input.int": "Getal...",
+  "figura.config.input.positive_int": "Getal...",
+  "figura.config.input.float": "Nummer...",
+  "figura.config.input.hex_color": "Kleur...",
+  "figura.config.input.folder_path": "Pad...",
+  "figura.config.input.ip": "IP-adres...",
 
 
-  "figura.config.nameplate": "Nameplate",
-  "figura.config.nameplate.tooltip": "Nameplate settings",
+  "figura.config.nameplate": "Naamplaat",
+  "figura.config.nameplate.tooltip": "Naamplaat-instellingen",
 
-  "figura.config.self_nameplate": "Enable Self Nameplate",
-  "figura.config.self_nameplate.tooltip": "Toggles the rendering of your own nameplate",
+  "figura.config.self_nameplate": "Schakel eigen naamplaat in",
+  "figura.config.self_nameplate.tooltip": "Zet renderen van je eigen naamplaat aan of uit",
 
-  "figura.config.preview_nameplate": "Nameplate in GUI",
-  "figura.config.preview_nameplate.tooltip": "Toggles the rendering of nameplates in the GUI",
+  "figura.config.preview_nameplate": "Naamplaat in GUI",
+  "figura.config.preview_nameplate.tooltip": "Zet renderen van je eigen naamplaat in de GUI aan of uit",
 
-  "figura.config.chat_nameplate": "Chat customizations",
-  "figura.config.chat_nameplate.tooltip": "Set the level of nameplate customizations on the CHAT",
-  "figura.config.entity_nameplate": "Entity customizations",
-  "figura.config.entity_nameplate.tooltip": "Set the level of nameplate customizations on the ENTITY",
-  "figura.config.list_nameplate": "Tablist customizations",
-  "figura.config.list_nameplate.tooltip": "Set the level of nameplate customizations on the TABLIST",
-  "figura.config.nameplate_level.1": "None",
+  "figura.config.chat_nameplate": "Chat-aanpassingen",
+  "figura.config.chat_nameplate.tooltip": "Stel het niveau van aanpassingen in voor de CHAT",
+  "figura.config.entity_nameplate": "Entiteit-aanpassingen",
+  "figura.config.entity_nameplate.tooltip": "Stel het niveau van aanpassingen in op de ENTITEIT",
+  "figura.config.list_nameplate": "Tablijst-aanpassingen",
+  "figura.config.list_nameplate.tooltip": "Stel het niveau van aanpassingen in op de TABLIJST",
+  "figura.config.nameplate_level.1": "Geen",
   "figura.config.nameplate_level.2": "Script",
   "figura.config.nameplate_level.3": "Script + Badges",
 
 
   "figura.config.script": "Script",
-  "figura.config.script.tooltip": "Script settings",
+  "figura.config.script.tooltip": "Script-instellingen",
 
   "figura.config.log_location": "Print Output",
-  "figura.config.log_location.tooltip": "Output location of script print functions",
+  "figura.config.log_location.tooltip": "Output-locatie van print-functies in scripts.",
   "figura.config.log_location.1": "Chat",
   "figura.config.log_location.2": "Logger",
 
-  "figura.config.allow_fp_hands": "First Person Hands",
-  "figura.config.allow_fp_hands.tooltip": "Toggles if scripts can move around, rotate or scale the First Person Hands",
+  "figura.config.allow_fp_hands": "Handen in de eerste persoon",
+  "figura.config.allow_fp_hands.tooltip": "Stel in of scripts je handen kunnen bewegen, draaien of vergroten/verkleinen in de eerste persoon",
 
-  "figura.config.log_number_length": "Print Number Length",
-  "figura.config.log_number_length.tooltip": "Changes the length of the decimal places that will be displayed within print functions",
+  "figura.config.log_number_length": "Print nummerlengte",
+  "figura.config.log_number_length.tooltip": "Verandert de lengte van de decimale posities die in print-functies worden weergegeven",
 
 
-  "figura.config.actionwheel": "Action Wheel",
-  "figura.config.actionwheel.tooltip": "Action Wheel settings",
+  "figura.config.actionwheel": "Actiewiel",
+  "figura.config.actionwheel.tooltip": "Actiewiel-instellingen",
 
-  "figura.config.action_wheel_button": "Action Wheel Button",
-  "figura.config.action_wheel_button.tooltip": "Button to open the Action Wheel",
+  "figura.config.action_wheel_button": "Actiewielknop",
+  "figura.config.action_wheel_button.tooltip": "Knop om het actiewiel te openen",
 
-  "figura.config.action_wheel_scale": "Action Wheel Size",
-  "figura.config.action_wheel_scale.tooltip": "Changes the Action Wheel size",
+  "figura.config.action_wheel_scale": "Actiewielgrootte",
+  "figura.config.action_wheel_scale.tooltip": "Verandert de grootte van het actiewiel",
 
-  "figura.config.action_wheel_title": "Selected Action's Text",
+  "figura.config.action_wheel_title": "Tekst van geselecteerde actie",
   "figura.config.action_wheel_title.tooltip": "Changes where the place of the selected action's text is shown",
   "figura.config.action_wheel_title.1": "Mouse (Tooltip)",
   "figura.config.action_wheel_title.2": "Mouse",
