--- a/src/main/resources/assets/figura/lang/nl_nl.json
+++ b/src/main/resources/assets/figura/lang/nl_nl.json
@@ -263,158 +263,160 @@
   "figura.config.action_wheel_scale.tooltip": "Verandert de grootte van het actiewiel",
 
   "figura.config.action_wheel_title": "Tekst van geselecteerde actie",
-  "figura.config.action_wheel_title.tooltip": "Changes where the place of the selected action's text is shown",
-  "figura.config.action_wheel_title.1": "Mouse (Tooltip)",
-  "figura.config.action_wheel_title.2": "Mouse",
-  "figura.config.action_wheel_title.3": "Top",
-  "figura.config.action_wheel_title.4": "Middle",
-  "figura.config.action_wheel_title.5": "Bottom",
+  "figura.config.action_wheel_title.tooltip": "Stelt in waar de naam van de geselecteerde actie wordt weergegeven",
+  "figura.config.action_wheel_title.1": "Muis (Tooltip)",
+  "figura.config.action_wheel_title.2": "Muis",
+  "figura.config.action_wheel_title.3": "Bovenaan",
+  "figura.config.action_wheel_title.4": "Midden",
+  "figura.config.action_wheel_title.5": "Onderaan",
 
-  "figura.config.action_wheel_decorations": "Item Decorations",
-  "figura.config.action_wheel_decorations.tooltip": "Toggle the rendering of the item decorations, like the damage bar and the item count",
+  "figura.config.action_wheel_decorations": "Voorwerpdecoraties",
+  "figura.config.action_wheel_decorations.tooltip": "Schakel het renderen van voorwerpdecoraties, zoals de schadebalk en voorwerphoeveelheid, in of uit",
 
 
-  "figura.config.ui": "UI Settings",
-  "figura.config.ui.tooltip": "UI Settings",
 
-  "figura.config.background_scroll_speed": "Background Scroll Speed",
-  "figura.config.background_scroll_speed.tooltip": "Multiplier for scroll speed of the animated background.",
+  "figura.config.ui": "UI-instellingen",
+  "figura.config.ui.tooltip": "UI-instellingen",
 
-  "figura.config.popup_scale": "Player Popup Scale",
-  "figura.config.popup_scale.tooltip": "Scale multiplier for the player popup",
+  "figura.config.background_scroll_speed": "Achtergrondscrollsnelheid",
+  "figura.config.background_scroll_speed.tooltip": "Stel de snelheid in waarmee de geanimeerde achtergrond scrolt",
 
-  "figura.config.popup_min_size": "Player Popup Min Size",
-  "figura.config.popup_min_size.tooltip": "Minimum size of player popup as you get farther from the person",
+  "figura.config.popup_scale": "Spelerpopupgrootte",
+  "figura.config.popup_scale.tooltip": "Stel de grootte in voor het spelerpopupmenu",
 
-  "figura.config.popup_max_size": "Player Popup Max Size",
-  "figura.config.popup_max_size.tooltip": "Maximum size of player popup as you get closer to the person",
+  "figura.config.popup_min_size": "Minimumgrootte spelerpopupmenu",
+  "figura.config.popup_min_size.tooltip": "Minimumgrootte van het spelerpopupmenu naarmate je verder van de persoon af staat",
+
+  "figura.config.popup_max_size": "Maximumgrootte spelerpopupmenu",
+  "figura.config.popup_max_size.tooltip": "Maximumgrootte van het spelerpopupmenu naarmate je dichter bij de persoon staat",
 
 
   "figura.config.paperdoll": "Paperdoll",
-  "figura.config.paperdoll.tooltip": "Paperdoll settings",
+  "figura.config.paperdoll.tooltip": "Paperdoll-instellingen",
 
-  "figura.config.has_paperdoll": "Enable paperdoll",
-  "figura.config.has_paperdoll.tooltip": "Toggle the paperdoll rendering",
+  "figura.config.has_paperdoll": "Paperdoll aan",
+  "figura.config.has_paperdoll.tooltip": "Schakel weergave van paperdoll in of uit",
 
-  "figura.config.paperdoll_always_on": "Always on",
-  "figura.config.paperdoll_always_on.tooltip": "Toggle if the paperdoll should render always or only during poses",
+  "figura.config.paperdoll_always_on": "Altijd aan",
+  "figura.config.paperdoll_always_on.tooltip": "Stel in of de paperdoll altijd zichtbaar is of alleen tijdens beweging",
 
-  "figura.config.first_person_paperdoll": "First Person only",
-  "figura.config.first_person_paperdoll.tooltip": "Toggles if the paperdoll should render only when in first person",
+  "figura.config.first_person_paperdoll": "Alleen eerste persoon",
+  "figura.config.first_person_paperdoll.tooltip": "Stel in of de paperdoll alleen weergegeven moet worden in de eerste persoon",
 
-  "figura.config.paperdoll_scale": "Paperdoll Scale",
-  "figura.config.paperdoll_scale.tooltip": "Changes the paperdoll scale",
+  "figura.config.paperdoll_scale": "Paperdoll-grootte",
+  "figura.config.paperdoll_scale.tooltip": "Verandert de grootte van de paperdoll",
 
   "figura.config.paperdoll_x": "Paperdoll X",
-  "figura.config.paperdoll_x.tooltip": "Changes the paperdoll X position",
+  "figura.config.paperdoll_x.tooltip": "Verandert de X-positie van de paperdoll",
 
   "figura.config.paperdoll_y": "Paperdoll Y",
-  "figura.config.paperdoll_y.tooltip": "Changes the paperdoll Y position",
+  "figura.config.paperdoll_y.tooltip": "Verandert de Y-positie van de paperdoll",
 
   "figura.config.paperdoll_pitch": "Paperdoll Pitch",
-  "figura.config.paperdoll_pitch.tooltip": "Changes the paperdoll PITCH rotation",
+  "figura.config.paperdoll_pitch.tooltip": "Verandert de PITCH-rotatie van de paperdoll",
 
   "figura.config.paperdoll_yaw": "Paperdoll Yaw",
-  "figura.config.paperdoll_yaw.tooltip": "Changes the paperdoll YAW rotation",
+  "figura.config.paperdoll_yaw.tooltip": "Verandert de YAW=rotatie van de paperdoll",
 
 
-  "figura.config.misc": "Misc",
-  "figura.config.misc.tooltip": "Unsorted/Unrelated settings",
+  "figura.config.misc": "Anders",
+  "figura.config.misc.tooltip": "Ongesorteerde/ongerelateerde instellingen",
 
-  "figura.config.popup_button": "Popup Menu",
-  "figura.config.popup_button.tooltip": "Button to open a popup menu with quick actions for the targeted user",
+  "figura.config.popup_button": "Popupmenu",
+  "figura.config.popup_button.tooltip": "Knop om een popupmenu te openen met acties voor de geselecteerde speler",
 
-  "figura.config.reload_button": "Reload Avatar",
-  "figura.config.reload_button.tooltip": "Reloads current equipped avatar on press",
+  "figura.config.reload_button": "Avatar herladen",
+  "figura.config.reload_button.tooltip": "Herlaadt huidige avatar wanneer ingedrukt",
 
-  "figura.config.panic_button": "Panic Button",
-  "figura.config.panic_button.tooltip": "Stop the rendering of all avatars",
+  "figura.config.panic_button": "Paniekmodus",
+  "figura.config.panic_button.tooltip": "Stopt de weergave van alle avatars",
 
-  "figura.config.button_location": "Menu Button Location",
-  "figura.config.button_location.tooltip": "Location of the figura button",
-  "figura.config.button_location.1": "Icon",
-  "figura.config.button_location.2": "Top Left",
-  "figura.config.button_location.3": "Top Right",
-  "figura.config.button_location.4": "Bottom Left",
-  "figura.config.button_location.5": "Bottom Right",
-  "figura.config.button_location.6": "Entity Left",
-  "figura.config.button_location.7": "Entity Right",
+  "figura.config.button_location": "Menuknoplocatie",
+  "figura.config.button_location.tooltip": "Locatie van de Figura-knop in het menu",
+  "figura.config.button_location.1": "Icoon",
+  "figura.config.button_location.2": "Linksboven",
+  "figura.config.button_location.3": "Rechtsboven",
+  "figura.config.button_location.4": "Linksonder",
+  "figura.config.button_location.5": "Rechtsonder",
+  "figura.config.button_location.6": "Entiteit Links",
+  "figura.config.button_location.7": "Entiteit Rechts",
 
-  "figura.config.update_channel": "Update Type",
-  "figura.config.update_channel.tooltip": "Changes the version type when looking for new Figura updates",
-  "figura.config.update_channel.1": "None",
-  "figura.config.update_channel.2": "Releases (Stable)",
-  "figura.config.update_channel.3": "Pre-releases (Unstable)",
+  "figura.config.update_channel": "Updatetype",
+  "figura.config.update_channel.tooltip": "Verandert het versietype waarnaar voor opdates wordt gezocht",
+  "figura.config.update_channel.1": "Geen",
+  "figura.config.update_channel.2": "Releases (Stabiel)",
+  "figura.config.update_channel.3": "Pre-releases (Instabiel)",
 
-  "figura.config.easter_eggs": "Enable Easter eggs",
-  "figura.config.easter_eggs.tooltip": "Toggles fun and unexpected aspects of Figura (boring!)",
+  "figura.config.easter_eggs": "Schakel easter eggs in",
+  "figura.config.easter_eggs.tooltip": "Schakelt leuke en onverwachte aspecten van Figura in of uit (boring!)",
 
 
-  "figura.config.dev": "Dev",
-  "figura.config.dev.tooltip": "Developer/Experimental settings",
+  "figura.config.dev": "Voor ontwikkelaars",
+  "figura.config.dev.tooltip": "Ontwikkelaars/Experimentele instellingen",
 
-  "figura.config.connection_toasts": "Backend Connection Toasts",
-  "figura.config.connection_toasts.tooltip": "Toggles if the game should show up toasts related with the backend connection status",
+  "figura.config.connection_toasts": "Backend-verbindingsnotificaties",
+  "figura.config.connection_toasts.tooltip": "Schakelt notificaties gerelateerd tot backendverbinding in of uit",
 
-  "figura.config.render_debug_parts_pivot": "Render Parts Pivot",
-  "figura.config.render_debug_parts_pivot.tooltip": "Render the Pivots from %d and %d when the hitbox debug rendering is enabled",
-  "figura.config.render_debug_parts_pivot.tooltip.cubes": "cubes",
-  "figura.config.render_debug_parts_pivot.tooltip.groups": "groups",
-  "figura.config.render_debug_parts_pivot.1": "Off",
-  "figura.config.render_debug_parts_pivot.2": "Only Visible",
-  "figura.config.render_debug_parts_pivot.3": "Everything",
+
+  "figura.config.render_debug_parts_pivot": "Render onderdeel draaipunt",
+  "figura.config.render_debug_parts_pivot.tooltip": "Render de draaipunten van %d en %d als hitbox debug aan staat",
+  "figura.config.render_debug_parts_pivot.tooltip.cubes": "kubussen",
+  "figura.config.render_debug_parts_pivot.tooltip.groups": "groepen",
+  "figura.config.render_debug_parts_pivot.1": "Uit",
+  "figura.config.render_debug_parts_pivot.2": "Alleen zichtbaar",
+  "figura.config.render_debug_parts_pivot.3": "Alles",
 
   "figura.config.log_others": "Log non-host scripts",
-  "figura.config.log_others.tooltip": "Allows debug logging and errors of non-host scripts",
+  "figura.config.log_others.tooltip": "Geeft een manier om andermans scripts te debuggen",
 
-  "figura.config.log_pings": "Log Pings",
-  "figura.config.log_pings.tooltip": "Chooses wherever to log pings data",
-  "figura.config.log_pings.1": "Off",
+  "figura.config.log_pings": "Log pings",
+  "figura.config.log_pings.tooltip": "Kies waar ping data wordt gelogd",
+  "figura.config.log_pings.1": "Uit",
   "figura.config.log_pings.2": "Chat",
   "figura.config.log_pings.3": "Logger",
 
-  "figura.config.sync_pings": "Sync Pings",
-  "figura.config.sync_pings.tooltip.1": "Toggles if local pings should run only when received from the backend",
-  "figura.config.sync_pings.tooltip.2": "Note that: no backend means no pings!",
+  "figura.config.sync_pings": "Synchroniseer pings",
+  "figura.config.sync_pings.tooltip.1": "Stelt in of lokale pings alleen moeten draaien zodra ze worden ontvangen van de backend",
+  "figura.config.sync_pings.tooltip.2": "Noot: Geen backend, geen pings!",
 
-  "figura.config.chat_messages": "Chat Messages",
-  "figura.config.chat_messages.tooltip.1": "Toggles if scripts can change and/or send chat messages for you",
-  "figura.config.chat_messages.tooltip.2": "This is a dangerous option, as the chat messages will still be signed",
-  "figura.config.chat_messages.tooltip.3": "Figura does not take any responsibility for the usage of this feature",
+  "figura.config.chat_messages": "Chatberichten",
+  "figura.config.chat_messages.tooltip.1": "Schakelt de mogelijkheid om scripts berichten van jou te laten veranderen of verzenden in of uit",
+  "figura.config.chat_messages.tooltip.2": "Dit is een gevaarlijke optie, omdat deze berichten nog steeds beveiligd zijn",
+  "figura.config.chat_messages.tooltip.3": "Figura neemt geen verantwoordelijkheid op zich voor het gebruik hiervan",
 
-  "figura.config.main_dir": "Figura Folder Location",
-  "figura.config.main_dir.tooltip": "Changes the location of the Figura folder",
+  "figura.config.main_dir": "Figura-maplocatie",
+  "figura.config.main_dir.tooltip": "Verandert de locatie van de Figura-map",
 
   "figura.config.auth_server_ip": "Auth Server IP",
-  "figura.config.auth_server_ip.tooltip": "Sets the IP of the auth server",
+  "figura.config.auth_server_ip.tooltip": "Stelt het IP van de authenticatie-server in",
 
   "figura.config.backend_ip": "Backend IP",
-  "figura.config.backend_ip.tooltip": "Sets the IP of the backend server",
+  "figura.config.backend_ip.tooltip": "Stelt het IP van de backend-server in",
 
 
-  "figura.command.click_to_open": "Click here to open",
-  "figura.command.run.not_local_error": "No local avatar equipped!",
-  "figura.command.run.no_script_error": "No active script to run code in!",
-  "figura.command.load.loading": "Loading avatar!",
-  "figura.command.load.invalid": "Invalid path \"%s\"",
-  "figura.command.docs_export.success": "Exported Figura docs into the Figura directory",
-  "figura.command.docs_export.error": "Failed to export Figura docs!",
-  "figura.command.docs_type_hover": "Click to show %s docs",
-  "figura.command.debug.success": "Saved debug data into the Figura directory",
-  "figura.command.debug.error": "Failed to save debug data!",
+  "figura.command.click_to_open": "Klik hier om te openen",
+  "figura.command.run.not_local_error": "Geen lokaal avatar geselecteerd!",
+  "figura.command.run.no_script_error": "Geen actief script om code in te draaien!",
+  "figura.command.load.loading": "Avatar laden...",
+  "figura.command.load.invalid": "Ongeldig pad \"%s\"",
+  "figura.command.docs_export.success": "Figura documentatie geëxporteerd naar Figura-map",
+  "figura.command.docs_export.error": "Fout tijdens het exporteren van de documentatie.",
+  "figura.command.docs_type_hover": "Klik om %s docs te laten zien",
+  "figura.command.debug.success": "Debug-data opgeslagen in de Figura-map",
+  "figura.command.debug.error": "Fout tijdens het opslaan van debug-data",
 
 
-  "figura.docs": "The \"/figura docs\" command allows you to access documentation for all types and functions Figura adds to its Lua scripting environment.",
+  "figura.docs": "Het \"/figura docs\"-commando laat je documentatie opvragen voor alle types en functies die door Figura worden toegevoegd aan de Lua script-omgeving.",
   "figura.docs.text.type": "Type",
-  "figura.docs.text.description": "Description",
-  "figura.docs.text.function": "Function",
+  "figura.docs.text.description": "Beschrijving",
+  "figura.docs.text.function": "Functie",
   "figura.docs.text.syntax": "Syntax",
-  "figura.docs.text.returns": "Returns",
-  "figura.docs.text.field": "Field",
-  "figura.docs.text.editable": "Editable",
-  "figura.docs.text.not_editable": "Not Editable",
+  "figura.docs.text.returns": "Geeft",
+  "figura.docs.text.field": "Veld",
+  "figura.docs.text.editable": "Aanpasbaar",
+  "figura.docs.text.not_editable": "Niet aanpasbaar",
   "figura.docs.text.entries": "Entries",
-  "figura.docs.text.extends": "extends",
+  "figura.docs.text.extends": "verlengt",
 
 
   "figura.docs.enum": "Contains all specific string values used in other functions.",
